<resources>
    <string name="app_name">Cafeteria 0.0.1</string>
    <string name="iniciar">Iniciar</string>
    <string name="login">Login</string>
    <string name="registrar">Registrar</string>
    <string name="entre_com_sua_conta_google">Entre com sua conta google</string>
    <string name="menu">Menu</string>
    <string name="espresso">Espresso</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="macciato">Macciato</string>
    <string name="mocha">Mocha</string>
    <string name="latte">Latte</string>
    <string name="bem_vindo_de_volta">Bem vindo de volta!</string>
    <string name="usu_rio">Usuário:</string>
    <string name="senha">Senha:</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha ?</string>
    <string name="entrar">Entrar</string>
    <string name="n_o_tem_uma_conta">Não tem uma conta?</string>
    <string name="registre_se">Registre-se,</string>
    <string name="fa_a_o_seu_cadastro">Faça o seu Cadastro</string>
    <string name="nome">Nome:</string>
    <string name="cpf">CPF:</string>
    <string name="cep">CEP:</string>
    <string name="atualizar_cep">Atualizar Cep</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="telefone">Telefone:</string>
    <string name="aceito_termos">Li e concordo com os termos e condições</string>
    <string name="entrar_com_conta_google">Entrar com conta Google</string>
    <string name="coffee_shop">Coffee Shop</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="expresso_tag_button">Expresso</string>
    <string name="cappuccino_tag_button">Cappuccino</string>
    <string name="macciato_tag_button">Macciato</string>
    <string name="moccha_tag_button">Moccha</string>
    <string name="latte_tag_button">Latte</string>
</resources>
