<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SignInFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ECE8E8">

        <View
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@color/font_marron"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_view_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/bem_vindo_de_volta"
                android:textColor="@color/font_white"
                android:textSize="32sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/user_name_local"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="164dp"
                android:hint="@string/usu_rio"
                android:inputType="text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_sign_in" />

            <EditText
                android:id="@+id/password_local"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/senha"
                android:inputType="textPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_name_local" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/esqueceu_sua_senha"
                android:textColor="@color/font_marron_claro"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_local" />

            <Button
                android:id="@+id/button_login_local"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_marron"
                android:text="@string/entrar"
                android:textColor="@color/font_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_local" />

            <TextView
                android:id="@+id/text_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_o_tem_uma_conta"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="@id/button_login_local"
                app:layout_constraintRight_toLeftOf="@id/text_login_to_sign_up"
                app:layout_constraintTop_toTopOf="@id/text_login_to_sign_up" />

            <TextView
                android:id="@+id/text_login_to_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/registre_ser"
                android:textColor="@color/font_marron"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/text_sign_in"
                app:layout_constraintRight_toRightOf="@id/button_login_local"
                app:layout_constraintTop_toBottomOf="@id/button_login_local" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>