<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_board"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@color/font_marron"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/fa_a_o_seu_cadastro"
            android:textColor="@color/font_white"
            android:textSize="32sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="16dp"
            android:verticalScrollbarPosition="defaultPosition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_board">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/text_sign_up_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:hint="@string/nome"
                    android:inputType="text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/text_sign_up_cpf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="@string/cpf"
                    android:inputType="number"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_sign_up_name" />

                <EditText
                    android:id="@+id/text_sign_up_cep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="@string/cep"
                    android:inputType="number"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/button_sign_up_atualization"
                    app:layout_constraintTop_toBottomOf="@+id/text_sign_up_cpf" />

                <Button
                    android:id="@+id/button_sign_up_atualization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/custom_button_marron"
                    android:paddingHorizontal="20dp"
                    android:text="@string/atualizar_cep"
                    android:textColor="@color/font_white"

                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintLeft_toRightOf="@id/text_sign_up_cep"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_sign_up_cep" />

                <TextView
                    android:id="@+id/text_view_sign_up_localidade"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/shape_custom_button_white"
                    android:hint="@string/cidade"
                    android:padding="12dp"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/text_view_sign_up_uf"
                    app:layout_constraintTop_toBottomOf="@+id/text_sign_up_cep" />

                <TextView
                    android:id="@+id/text_view_sign_up_uf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_custom_button_white"
                    android:hint="@string/estado"
                    android:padding="12dp"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/text_view_sign_up_localidade"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_view_sign_up_localidade" />

                <TextView
                    android:id="@+id/text_view_sign_up_logradouro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_custom_button_white"
                    android:hint="Endereço"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_sign_up_localidade" />
                <TextView
                    android:id="@+id/text_view_sign_up_bairro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_custom_button_white"
                    android:hint="Endereço"
                    android:padding="12dp"
                    android:layout_marginTop="8dp"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_sign_up_logradouro" />
                <EditText
                    android:id="@+id/text_sign_up_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="@string/telefone"
                    android:inputType="phone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_sign_up_bairro" />

                <EditText
                    android:id="@+id/text_sign_up_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:hint="E-Mail:"
                    android:inputType="textEmailAddress"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_sign_up_phone" />

                <CheckBox
                    android:id="@+id/checkbox_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/aceito_termos"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_sign_up_email" />


                <Button
                    android:id="@+id/button_sign_up"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button_marron"
                    android:text="@string/registrar"
                    android:textColor="@color/font_white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/checkbox_sign_up" />


                <TextView
                    android:id="@+id/text_login_to_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/entrar_com_conta_google"
                    android:textColor="@color/font_blue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@id/button_sign_up"
                    app:layout_constraintRight_toRightOf="@id/button_sign_up"
                    app:layout_constraintTop_toBottomOf="@id/button_sign_up" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>